--- a/client/style.css
+++ b/client/style.css
@@ -3,9 +3,19 @@
     z-index: 1;
 }
 
-.background {
+.question-container {
     position: absolute;
     background-color: aqua;
     width: 100%;
     height: 100%;
+}
+
+.is-correct-answer {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
 }
