--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,13 @@
+* {
+    margin: 0;
+    overflow: hidden;
+    font-family: 'Monteserrat';
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+    user-select: none;
+}
+
 .pincode {
     text-align: center;
     z-index: 1;
@@ -18,4 +28,76 @@
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
+}
+
+
+
+
+
+/* Enter Page */
+.main-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #381272;
+    display: grid;
+    grid-template-rows: 1fr 6fr;
+}
+
+#form-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.enter-pin-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    border-radius: 5px;
+    gap: 10px;
+    width: fit-content;
+    padding: 10px;
+}
+
+.enter-pin-form > * {
+    all: unset;
+    width: 100%;
+
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 10px;
+}
+
+#game-input {
+    border: 2px solid lightgrey;
+}
+
+#enter-pin {
+    background-color: rgb(60, 60, 60);
+    color: white;
+    width: 100%;
+    border-bottom: 2px solid rgb(30, 30, 30);
+    cursor: pointer;
+}
+
+#enter-pin:hover {
+    background-color: rgb(40, 40, 40);
+    border-bottom: unset;
+    margin-top: 2px;
+}
+
+#main-menu {
+    all: unset;
+    height: fit-content;
+    width: fit-content;
+    padding: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: white;
+
+    border-radius: 7px;
+    cursor: pointer;
 }
