--- a/host/style.css
+++ b/host/style.css
@@ -1,11 +1,63 @@
+* {
+    margin: 0;
+    overflow: hidden;
+    user-select: none;
+}
+
+
 .main-container {
     position: absolute;
     width: 100%;
     height: 100%;
     background-color: white;
+    display: grid;
+    grid-template-rows: 1fr 1fr 7fr 1fr;
+}
+
+#game-id {
+    text-align: center;
+}
+
+#status-container {
+    display: flex;
+    justify-content: right;
+}
+
+#lock-start {
+    display: flex;
+    align-self: center;
+    gap: 5px;
+    margin-right: 20px;
+    & > * { cursor: pointer; }
+}
+
+#lock {
+    padding: 5px;
+    border: 2px solid lightgrey;
+    border-radius: 5px;
+}
+
+#settings-container {
+    display: flex;
+    justify-content: right;
+
+    & > input { all: unset; height: fit-content; background-color: rgba(60, 60, 60, 150); border: 2px solid black; cursor: pointer; }
+    & > button { all: unset; height: fit-content; background-color: rgba(60, 60, 60, 150); border: 2px solid black; cursor: pointer; }
 }
 
 
-#game-id {
+#clients-container {
+    display: grid;
+    grid-template-columns: 4;
+    grid-template-rows: 5;
+}
 
+.client {
+    background-color: rgb(200, 200, 200);
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    cursor: pointer;
 }
