--- a/builder/style.css
+++ b/builder/style.css
@@ -1,3 +1,7 @@
+*{
+    font-family: Montserrat;
+}
+
 container{
     display: flex;
     width: 100%;
@@ -119,7 +123,6 @@ button {
   color: #FFFFFF;
   cursor: pointer;
   display: flex;
-  font-family: din-round,sans-serif;
   font-size: 11.5px;
   font-weight: 700;
   letter-spacing: .8px;
@@ -191,7 +194,6 @@ button:disabled {
 
   .custom-select {
     position: relative;
-    font-family: Arial;
     margin-top: auto;
     margin-bottom: auto;
     width: 150px;
