--- a/builder/style.css
+++ b/builder/style.css
@@ -1,5 +1,6 @@
 *{
-    font-family: Montserrat;
+    font-family: 'Montserrat';
+    font-weight: bold;
 }
 
 container{
@@ -60,7 +61,6 @@ input[type=checkbox] {
   background-color: #fff;
   margin-top: auto;
   margin-bottom: auto;
-	font: inherit;
   color: currentColor;
   width: 1.15em;
   height: 1.15em;
@@ -87,7 +87,6 @@ input[type=radio] {
 	appearance: none;
   background-color: #fff;
   margin: 0;
-	font: inherit;
   color: #1899D6;
   margin-top: auto;
   margin-bottom: auto;
@@ -123,8 +122,6 @@ button {
   color: #FFFFFF;
   cursor: pointer;
   display: flex;
-  font-size: 11.5px;
-  font-weight: 700;
   letter-spacing: .8px;
   line-height: 20px;
   margin: 10px;
