--- a/builder/style.css
+++ b/builder/style.css
@@ -35,7 +35,7 @@ container{
 }
 
 body{
-    background-color:#01010f;
+    background-color:#381272;
     overflow:   hidden ;
     margin: auto;
     position: absolute;
