--- a/builder/style.css
+++ b/builder/style.css
@@ -7,7 +7,8 @@ container{
     display: flex;
     width: 100%;
     justify-content: center;
-    padding: 10px;
+    margin-bottom: 50px;
+    border-radius: 25px;
 }
 
 #gameselectorContainer{
