--- a/main/style.css
+++ b/main/style.css
@@ -22,9 +22,9 @@ img{
 }
 .topBar{
     display:flex;
-    width: calc(100% - 20px);    
+    width: calc(100% - 40px);    
     background-color: #381272;
-    margin: 0px;
+    margin-left: 10px;
     margin-top: 10px;
     padding: 10px;
     border-radius: 15px;
