--- a/builder/style.css
+++ b/builder/style.css
@@ -165,6 +165,11 @@ button:hover:not(:disabled) {
 
 button:disabled {
   cursor: auto;
+  background-color: gray;
+}
+button:disabled::after {
+  cursor: auto;
+  background-color: darkgray;
 }
 
 
