--- a/main/style.css
+++ b/main/style.css
@@ -40,6 +40,27 @@ img{
   flex-direction: row;
   position: absolute;
 }
+.questionDiv{
+  display:block;
+  height: 40px;
+  width: calc(50vw - 120px);
+  background-color: white;
+  margin: 20px;
+  border-radius:15px;
+  border-bottom: gray solid 8px;
+  padding: 10px;
+  font-size: 30px;
+}
+.questionDiv:hover{
+  background-color: wheat;
+  cursor: pointer;
+}
+.answer {
+  width: 100%;
+  display: block; 
+  font-size: 20px;
+  margin-top: 20px;
+}
 
 #searchContainer{
     display: flex;
@@ -81,7 +102,7 @@ h1{
     height: 150px;
     width: 400px;
     background-color: white;
-    margin: 30px;
+    margin: 20px;
     border-radius: 25px;
     border-bottom: gray solid 8px;
 }
