--- a/host/states/preview.css
+++ b/host/states/preview.css
@@ -72,3 +72,14 @@ body {
     border-radius: 10px;
     cursor: pointer;
 }
+
+.client:hover {
+    text-decoration: line-through;
+}
+
+#waiting-for-players {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
