--- a/main/style.css
+++ b/main/style.css
@@ -94,15 +94,21 @@ h1{
     color: #FFFFFF;
     position: absolute;
 }
-.gameContainer{
-    display: flex;
+#gameBar{
+  justify-content: center;
+}
+#gameContainer{
+  display: inline-block;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
 }
 .game{
     display:inline-flex;
     height: 150px;
-    width: 400px;
+    width: 380px;
     background-color: white;
-    margin: 20px;
+    margin: 10px;
     border-radius: 25px;
     border-bottom: gray solid 8px;
 }
