Host shows answers

--- a/host/states/showAnswers.css
+++ b/host/states/showAnswers.css
@@ -2,13 +2,18 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+.red { background-color: rgb(230, 0, 0) }
+.blue { background-color: rgb(40, 0, 220) }
+.orange { background-color: rgb(255, 165, 0) }
+.green { background-color: rgb(0, 200, 0) }
+
 .main-container {
     display: grid;
     position: absolute;
     width: 100%;
     height: 100%;
-    margin-top: 1em;
-    grid-template-rows: 2fr 11fr 5fr 2fr;
+    grid-template-rows: 1fr 11fr 4fr 1fr;
 }
 
 #show-answers {
@@ -19,9 +24,15 @@ body {
 .answer-container {
     display: flex;
     flex-direction: column;
-    padding-left: 3rem;
-    padding-top: 3rem;
     justify-content: end;
     align-items: center;
 }
 
+#alternatives-container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(50px, 1fr));
+}
+
+.alternatives {
+    text-align: center;
+}
