--- a/builder/style.css
+++ b/builder/style.css
@@ -7,28 +7,61 @@ container{
 }
 #maincontainer{
   justify-content: left;
+  background-color: white;
+  margin: 20px;
+  margin-bottom: 40px;
+  padding: 10px;
+  width: 300px;
+
 }
 #gameselectorContainer{
-    justify-content:left;
+    justify-content:center;
 
     overflow-x: auto;
+    margin: 20px;
     padding-left: 50px;
-    padding-right: 100px;
-    width: calc(100vw - 100px);
+    padding-right: 50px;
+    background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+#currentGameContainer{
+  justify-content: left;
+  margin: 20px;
+  padding: 10px;
+  background-color: white;
+  width: 900px;
 }
 #questionListContainer{
   justify-content:left;
 
   overflow-x: auto;
+  margin: 20px;
   padding-left: 50px;
   padding-right: 100px;
-  width: calc(100vw - 100px);
+  width: min(calc(100vw - 200px),20px);
+  background-color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+#questionSettingContainer{
+  justify-content: center;
+  margin: 20px;
+  padding: 10px;
+  background-color: white;
+  width: 500px;
+}
+#currentQuestion{
+  width: 200px;
 }
 
 #answerContainer{
-  width: calc(100vw - 100px);
+  width: calc(100vw - 200px);
     padding-left: 50px;
+  margin: 20px;
   padding-right: 100px;
+    background-color: white;
+
 
 }
 
