--- a/host/states/preview.css
+++ b/host/states/preview.css
@@ -7,9 +7,10 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color: #19A7AA;
     display: grid;
     grid-template-rows: 1fr 1fr 7fr 1fr;
+    color: #E6F1F1
 }
 
 .game-pin-container {
@@ -21,38 +22,80 @@ body {
 #game-pin-text {
     display: flex;
     gap: 10px;
+    background-color: rgb(100, 50, 150);
+    padding: 10px 50px;
+    border-radius: 15px;
 }
 
-#game-pin {
+#game-pin-text:hover {
+    outline: #E6F1F1 solid 1px;
     cursor: pointer;
 }
+
 
 #lock-start-container {
     display: flex;
     justify-content: right;
+    margin-right: 2vw;
 }
 
 #lock-start-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5px;
+    gap: 15px;
     & > * { cursor: pointer; }
 }
 
 #lock {
     padding: 5px;
-    border: 2px solid lightgrey;
     border-radius: 5px;
     width: 20px;
+
+    &:hover { outline: 1px solid #E6F1F1; }
 }
+
+.next {
+    all: unset;
+    font-size: 20px;
+    padding: 5px 10px;
+    border-radius: 10px;
+    background-color: rgb(100, 50, 150);
+}
+
+.next:hover {
+    outline: #E6F1F1 solid 1px;
+}
+
+#waiting-for-players {
+    position: absolute;
+    font-size: 3rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
+    &:hover {
+        cursor: default;
+    };
+}
+
+
+
 
 #settings-container {
     display: flex;
     justify-content: right;
-
-    & > :not(:first-child) { all: unset; height: fit-content; background-color: rgba(60, 60, 60, 150); border: 2px solid black; cursor: pointer; }
+    align-items: center;
+    gap: 10px;
 }
+
+#settings-container > * {
+    all: unset;
+    border: 2px solid black;
+}
+
+
+
 
 #client-container {
     display: grid;
@@ -75,11 +118,4 @@ body {
 
 .client:hover {
     text-decoration: line-through;
-}
-
-#waiting-for-players {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
