--- a/host/states/preview.css
+++ b/host/states/preview.css
@@ -1,22 +1,20 @@
 body {
-    margin: 0;
-    overflow: hidden;
-}
-
-.main-container {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    background-color: #19A7AA;
+    color: #E6F1F1;
+    overflow: hidden;
+    margin: 0;
     width: 100%;
     height: 100%;
-    background-color: #19A7AA;
-    display: grid;
-    grid-template-rows: 1fr 1fr 7fr 1fr;
-    color: #E6F1F1
 }
 
 .game-pin-container {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 20vh;
 }
 
 #game-pin-text {
@@ -25,6 +23,7 @@ body {
     background-color: rgb(100, 50, 150);
     padding: 10px 50px;
     border-radius: 15px;
+    font-size: 3rem;
 }
 
 #game-pin-text:hover {
@@ -51,7 +50,6 @@ body {
     padding: 5px;
     border-radius: 5px;
     width: 20px;
-
     &:hover { outline: 1px solid #E6F1F1; }
 }
 
@@ -69,24 +67,24 @@ body {
 
 #waiting-for-players {
     position: absolute;
-    font-size: 3rem;
     top: 50%;
     left: 50%;
+    font-size: 3rem;
     transform: translate(-50%, -50%);
-    
-    &:hover {
-        cursor: default;
-    };
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
 }
 
-
-
-
 #settings-container {
+    position: absolute;
+    right: 0;
+    margin: 1rem;
     display: flex;
     justify-content: right;
     align-items: center;
     gap: 10px;
+    bottom: 0;
 }
 
 #settings-container > * {
@@ -94,16 +92,43 @@ body {
     border: 2px solid black;
 }
 
+#settings-container > img {
+    border: none;
+    width: 30px;
+    cursor: pointer;
+}
 
 
 
 #client-container {
+    position: relative;
     display: grid;
-    padding: 100px;
+    margin-top: 110px;
+    margin-left: 110px;
+    margin-right: 100px;
+    padding-right: 30px;
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
-    justify-items: center;
-    align-items: center;
+    grid-auto-flow: row;
+    gap: 1rem;
+    place-items: center;
+    overflow-y: auto;
+    min-height: 100px;
+    max-height: 50%;
+}
+
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #381272;
+    border-radius: 100vh;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(100, 50, 150);
+
+    border-radius: 100vh;
 }
 
 .client {
@@ -114,6 +139,7 @@ body {
     text-align: center;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 1.5rem;
 }
 
 .client:hover {
